--- a/airline/src/css/style.css
+++ b/airline/src/css/style.css
@@ -1041,6 +1041,7 @@ body {
     background-color:white;
     margin: 0 auto 1em auto;
   }
+ 
   
   
   
@@ -2511,5 +2512,128 @@ button:hover {
 .no-flights-message p {
     margin: 0; /* Remove default margin */
 }
-
+/* join page start */
+/* Styling the JoinPage component */
+.join-page {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+  }
+  
+  form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    
+    width: 600px;
+    margin-right: 20px;
+  }
+  
+  .section {
+    margin-bottom: 20px;
+  }
+  
+  .section h2 {
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #333;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="date"] {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+  }
+  
+  button[type="submit"] {
+    background-color: #ec1c24;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #c51a1c;
+  }
+  
+  .error {
+    color: red;
+    font-size: 12px;
+  }
+  
+  .required {
+    color: red;
+  }
+  
+  /* AirRewards Section */
+  .air-rewards {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .air-rewards h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #ec1c24;
+  }
+  
+  .air-rewards p {
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 10px;
+  }
+  
+  .air-rewards ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  
+  .air-rewards ul li {
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    position: relative;
+  }
+  
+  .air-rewards ul li:before {
+    content: '>';
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: #ec1c24;
+  }
+  .double-field {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+  }
+  
+  .double-field label {
+    flex: 1;
+  }
+  
+  
+/* join page end */
 
